Fixing overlapping when no breeds were found with filter

--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,8 @@ body {
 
 #root {
     max-width: 100%;
-    height: 100vh;
+    min-height: 100dvh;
+    height: auto;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
