--- a/src/styles/breedDetails.css
+++ b/src/styles/breedDetails.css
@@ -119,6 +119,7 @@
     align-items: center;
     border-radius: 20px;
     padding: 10px;
+    text-transform: capitalize;
 }
 
 #details__description p {
