--- a/src/styles/breedList.css
+++ b/src/styles/breedList.css
@@ -1,3 +1,9 @@
+#breed-list {
+    background-color: var(--background);
+    min-height: 100dvh;
+    padding-bottom: 120px;
+}
+
 #list__info {
     margin-bottom: 16px;
     margin-left: 30px;
